# itnews-flux

./: .dockerignore  .env.docker  .env.example  .gitignore  AUTOMATION.md  CLAUDE.md  DOCKER.md  Dockerfile  README.md  TASKS.md  TECH_NEWS_DIGEST_DESIGN.md  TECH_NEWS_DIGEST_PRD.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_scheduler.py  run_web.py  test_ai_services.py  test_crawler.py  test_korean_crawler.py  test_pipeline.py  test_translator.py  test_video_production.py  test_web.py
src/api/: __init__.py  main.py
src/api/routers/: __init__.py  analytics.py  news.py  schedule.py  videos.py
src/api/schemas/: __init__.py  news.py  schedule.py  video.py
src/automation/: __init__.py  pipeline.py  scheduler.py  youtube.py
src/core/: __init__.py
src/core/ai_services/: __init__.py  base.py  image_generator.py  models.py  script_generator.py  translator.py  tts_generator.py
src/core/config/: __init__.py  settings.py
src/core/logging/: __init__.py  filters.py  formatters.py  logger.py
src/news/: models.py
src/news/crawler/: __init__.py  base_crawler.py
src/news/crawler/sources/: etnews.py  techcrunch.py  theverge.py  zdnet_kr.py
src/news/selector/: __init__.py  news_selector.py
src/video/: __init__.py  models.py
src/video/composition/: __init__.py  video_composer.py
src/video/layout/: __init__.py  lower_third.py
src/web/static/css/: style.css
src/web/static/js/: app.js
src/web/templates/: base.html  dashboard.html  news.html  settings.html  videos.html
